<resources>
    <string name="app_name" translatable="false">Tempo</string>
    <string name="title_activity_artist_browser">ArtistBrowserActivity</string>
    <string name="albums">Albums</string>
    <string name="all_albums">All Albums</string>
    <string name="artists">Artists</string>
    <string name="all_artists">All Artists</string>
    <string name="songs">Songs</string>
    <string name="all_songs">All Songs</string>
    <string name="playlists">Playlists</string>
    <string name="all_playlists">All Playlists</string>
    <string name="search">Search</string>
    <string name="clear_cache_setting_lable">Clear Cache</string>
    <string name="rescan_library_setting_lable">Rescan Library files</string>
    <string name="player">Player</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play_all">Play All</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="settings">Settings</string>
    <string name="rescan_playlists">Rescan Playlists</string>
    <string name="remove_from_playlist">Remove from playlist</string>
    <string name="download_album">Download Album</string>
    <string name="menu_button_description">Menu Button</string>
    <string name="album_artwork_description">Album Artwork</string>
    <string name="album">album</string>
    <string name="title">title</string>
    <string name="artist">artist</string>
    <string name="playlist">playlist</string>
    <string name="time_zero">0:00</string>
    <string name="button_play_pause">Play/Pause button</string>
    <string name="button_prev"/>
    <string name="button_next">Next Button</string>
    <string name="button_shuffle">Shuffle</string>
    <string name="button_repeat">Repeat</string>
    <string name="download_playlsit">Download Playlist</string>
    <string name="download_all_songs">Download All Songs</string>
    <string name="downloads">Downloads</string>
    <string name="title_activity_downloads_browser">Downloads</string>
    <string name="action_settings">Settings</string>
    <string name="download_queue_empty">All songs have finished downloading, or the queue is empty</string>
    <string name="download_icon">download icon</string>
</resources>
