<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_artists"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/artists"/>
        <item
                android:id="@+id/nav_albums"
                android:icon="@drawable/ic_album_black_24dp"
                android:title="@string/albums"/>
        <item
                android:id="@+id/nav_songs"
                android:icon="@drawable/ic_music_note_black_24dp"
                android:title="@string/songs"/>
        <item android:title="@string/playlists" android:id="@+id/nav_playlists"
              android:icon="@drawable/ic_playlist_play_black_24dp"/>
        <item
                android:id="@+id/nav_player"
                android:icon="@drawable/ic_play_arrow_black_24dp"
                android:title="@string/player"/>
    </group>

</menu>