<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--Search bar-->
    <item
        android:id="@+id/mainSearch"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView"/>
    <item
        android:id="@+id/mainPlayer"
        android:icon="@drawable/ic_play_arrow_black_24dp"
        android:title="@string/player"
        app:showAsAction="ifRoom"/>
    <!--More Actions-->
    <!--Settings-->
    <item
            android:id="@+id/mainSettings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="Settings"
            app:showAsAction="never"/>
    <!--Clear Cache-->
    <item
            android:id="@+id/mainClearCache"
            android:title="@string/clear_cache_setting_lable"
            app:showAsAction="never"/>
</menu>