<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                        xmlns:app="http://schemas.android.com/apk/res-auto"
                                        xmlns:tools="http://schemas.android.com/tools" android:id="@+id/main_navdrawer"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:fitsSystemWindows="true">

    <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".activities.MainActivity">

        <android.support.v7.widget.Toolbar
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:theme="?attr/actionBarTheme"
                android:minHeight="?attr/actionBarSize"
                android:id="@+id/mainToolbar" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
        <Button
                android:text="@string/artists"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/buttonAllArtists"
                android:layout_marginTop="50dp" app:layout_constraintTop_toBottomOf="@+id/mainToolbar"
                android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/buttonAllAlbums"/>
        <Button
                android:text="@string/albums"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/buttonAllAlbums"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/buttonAllArtists"
                android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/buttonAllSongs"/>
        <Button
                android:text="@string/songs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonAllSongs"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.507"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/buttonAllAlbums"
                android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/buttonPlaylists"/>
        <Button
                android:text="@string/playlists"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonPlaylists"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/buttonPlayer" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/buttonAllSongs"/>
        <Button
                android:text="@string/player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonPlayer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/buttonPlaylists"/>
    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.NavigationView
            android:id="@+id/main_navview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:menu="@menu/nav_drawer"
            app:headerLayout="@layout/drawer_header">
    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>