<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="?attr/actionBarSize" android:clickable="false"
>

    <TextView
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/songID"
            android:textAppearance="@style/TextAppearance.AppCompat" android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/title"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/songTitleLabel"
            android:textAppearance="@style/TextAppearance.AppCompat"
            app:layout_constraintTop_toTopOf="parent"
            android:textAlignment="viewStart" android:textSize="18sp" android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toTopOf="@+id/songArtistLabel" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/songDownloadIcon"/>
    <TextView
            android:text="@string/artist"
            android:layout_width="wrap_content"
            android:layout_height="0dp" android:id="@+id/songArtistLabel"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:layout_marginStart="24dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="4dp"/>
    <TextView
            android:text="@string/album"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/songAlbumLabel"
            android:textAppearance="@style/TextAppearance.AppCompat"
            app:layout_constraintStart_toEndOf="@+id/divider4" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="4dp"
            app:layout_constraintTop_toBottomOf="@+id/songTitleLabel" android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/songDownloadIcon"/>
    <View
            android:id="@+id/divider4"
            android:layout_width="10dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="@+id/songAlbumLabel"
            app:layout_constraintStart_toEndOf="@+id/songArtistLabel" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/songAlbumLabel"/>
    <View
            android:id="@+id/itemDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/save_icon_white"
            android:id="@+id/songDownloadIcon" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/download_icon"/>
</android.support.constraint.ConstraintLayout>
